--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
@@ -309,6 +309,9 @@
             <setting name="ServiceURL" serializeAs="String">
                 <value>http://127.0.0.1:812</value>
             </setting>
+            <setting name="LIMIT_SHOW_ERROR" serializeAs="String">
+                <value>50</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
