--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Devices\LightSource.cs" />
     <Compile Include="Devices\MyCamera.cs" />
     <Compile Include="Devices\MyPLC.cs" />
+    <Compile Include="Devices\MyScaner.cs" />
     <Compile Include="Devices\PLCComm.cs" />
     <Compile Include="Events\Preprocessing.cs" />
     <Compile Include="Models\CadFile.cs" />
@@ -276,7 +277,7 @@
       <DependentUpon>WaitingForm.xaml</DependentUpon>
     </Compile>
     <Compile Include="VI\AutoAdjustROIFOV.cs" />
-    <Compile Include="VI\CaptureImage.cs" />
+    <Compile Include="VI\MoveXYAxis.cs" />
     <Compile Include="VI\Decoder.cs" />
     <Compile Include="VI\Predictor.cs" />
     <Compile Include="VI\ServiceComm.cs" />
