--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -312,6 +312,9 @@
             <setting name="LIMIT_SHOW_ERROR" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="PLC_BIT_RESET_SCAN" serializeAs="String">
+                <value>M850</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
