--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -315,6 +315,9 @@
             <setting name="PLC_BIT_RESET_SCAN" serializeAs="String">
                 <value>M850</value>
             </setting>
+            <setting name="PLC_BIT_CONFIRM_PASS" serializeAs="String">
+                <value>M937</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
