--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.vshost.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.vshost.exe.config
@@ -312,6 +312,12 @@
             <setting name="LIMIT_SHOW_ERROR" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="PLC_BIT_RESET_SCAN" serializeAs="String">
+                <value>M850</value>
+            </setting>
+            <setting name="PLC_BIT_CONFIRM_PASS" serializeAs="String">
+                <value>M937</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
