--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -154,6 +154,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DB\Ctl.cs" />
+    <Compile Include="DB\Query.cs" />
     <Compile Include="DB\Result.cs" />
     <Compile Include="DB\SQLiteConn.cs" />
     <Compile Include="DB\Struct\DBObjectStruct.cs" />
@@ -189,6 +190,9 @@
     <Compile Include="Utils\HikCamera.cs" />
     <Compile Include="Utils\LogCtl.cs" />
     <Compile Include="Utils\SLMP.cs" />
+    <Compile Include="Views\Histories\HistoryWindow.xaml.cs">
+      <DependentUpon>HistoryWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainConfigWindow\AlarmForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -283,6 +287,10 @@
     <Compile Include="VI\Decoder.cs" />
     <Compile Include="VI\Predictor.cs" />
     <Compile Include="VI\ServiceComm.cs" />
+    <Page Include="Views\Histories\HistoryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -374,6 +382,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Icons\history.png" />
+    <Resource Include="Resources\Icons\bell.png" />
     <EmbeddedResource Include="Views\MainConfigWindow\AlarmForm.resx">
       <DependentUpon>AlarmForm.cs</DependentUpon>
     </EmbeddedResource>
