--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -318,6 +318,18 @@
             <setting name="PLC_BIT_CONFIRM_PASS" serializeAs="String">
                 <value>M937</value>
             </setting>
+            <setting name="PLC_GO_HOME_TOP" serializeAs="String">
+                <value>S75</value>
+            </setting>
+            <setting name="PLC_GO_HOME_BOT" serializeAs="String">
+                <value>S76</value>
+            </setting>
+            <setting name="PLC_GO_HOME_CONVEYOR" serializeAs="String">
+                <value>S4</value>
+            </setting>
+            <setting name="PLC_GO_HOME_ALL" serializeAs="String">
+                <value>M2999</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
