--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -229,6 +229,12 @@
     <Compile Include="Views\MainConfigWindow\MachineIssueForm.designer.cs">
       <DependentUpon>MachineIssueForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\MainConfigWindow\PLCMonitor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MainConfigWindow\PLCMonitor.Designer.cs">
+      <DependentUpon>PLCMonitor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModelManagement\AutoAdjustFOVWindow.xaml.cs">
       <DependentUpon>AutoAdjustFOVWindow.xaml</DependentUpon>
     </Compile>
@@ -376,6 +382,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Views\MainConfigWindow\PLCMonitor.resx">
+      <DependentUpon>PLCMonitor.cs</DependentUpon>
+    </EmbeddedResource>
+    <Resource Include="Resources\Icons\plc-removebg.png" />
     <Resource Include="Resources\Icons\ExportExcel.png" />
     <Resource Include="Resources\Icons\excel.png" />
     <Resource Include="Resources\Icons\history.png" />
