--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
@@ -330,6 +330,9 @@
             <setting name="PLC_GO_HOME_ALL" serializeAs="String">
                 <value>M2999</value>
             </setting>
+            <setting name="DO_READ_CODE" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
