--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -263,6 +263,9 @@
     <Compile Include="Views\ModelManagement\NewModel.xaml.cs">
       <DependentUpon>NewModel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ModelManagement\SaveAsWindow.xaml.cs">
+      <DependentUpon>SaveAsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModelManagement\SuggestLinkPadWindow.xaml.cs">
       <DependentUpon>SuggestLinkPadWindow.xaml</DependentUpon>
     </Compile>
@@ -338,6 +341,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ModelManagement\SaveAsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ModelManagement\SuggestLinkPadWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -389,6 +396,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Icons\Save-as-icon.png" />
+    <Resource Include="Resources\Icons\padx.png" />
     <Resource Include="Resources\Icons\active.png" />
     <Resource Include="Resources\Icons\flipx.png" />
     <Resource Include="Resources\Icons\flipy.png" />
